# bailando-basic-web

./: CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: codeql-analysis.yml
dependencies/: CMakeLists.txt
dependencies/curl/: CMakeLists.txt
dependencies/json/: CMakeLists.txt
include/: JSONCompatible.h  LukesMass.h  SimpleGet.h  SimplePost.h  SimpleResult.h
lib/: CMakeLists.txt
src/: main.cpp
